--- a/Derma AI/Login.html
+++ b/Derma AI/Login.html
@@ -11,13 +11,14 @@
     <!-- CSS -->
     <link rel="stylesheet" href="style.css">
 
-    <link rel="icon" type="image/png" href="images/Dermai logo.png">
+    <link rel="icon" type="image/png" href="dermai-logo.png">
 </head>
-<body>
+<body class="login-page">
+
     <header>
   <div class="header-container">
     <div class="logo-container">
-      <img src="assets/images/Dermai logo.png" alt="DERMAI Logo" class="header-logo" />
+      <img src="dermai-logo.png" alt="DERMAI Logo" class="header-logo" />
       <div class="logo-text">
         <h1>DERMAI</h1>
         <p class="tagline">AI-Powered Skincare Consultation</p>
@@ -26,7 +27,7 @@
 
     <nav class="header-links">
       <a href="index.html" class="login-btn">Home</a>
-      <a href="services.html" class="login-btn">Services</a>
+      <a href="services.html" class="login-btn" data-require-login="true">Services</a>
       <a href="contact.html" class="login-btn">Support</a>
       <a href="login.html" class="login-btn">Login</a>
     </nav>
@@ -38,7 +39,7 @@
     <div class="auth-card glass-soft">
 
         <div class="brand-block">
-            <img src="images/Dermai logo.png" class="brand-logo">
+            <img src="dermai-logo.png" class="brand-logo" alt="DERMAI Logo">
             <h1 class="brand-name">DERMAI</h1>
             <p class="brand-tagline">AI-Powered Skincare Consultation</p>
         </div>
@@ -122,6 +123,6 @@
 </div>
 
 <script src="Login.js"></script>
-
+<script src="auth.js"></script>
 </body>
 </html>
