--- a/Derma AI/services.html
+++ b/Derma AI/services.html
@@ -11,13 +11,14 @@
   <!-- Main CSS -->
   <link rel="stylesheet" href="style.css" />
 
-  <link rel="icon" type="image/png" href="Dermai logo.png" />
+  <link rel="icon" type="image/png" href="dermai-logo.png"/>
 </head>
-<body>
+<body class="services-page">
+
 <header>
   <div class="header-container">
     <div class="logo-container">
-      <img src="assets/images/Dermai logo.png" alt="DERMAI Logo" class="header-logo" />
+      <img src="dermai-logo.png" alt="DERMAI Logo" class="header-logo" />
       <div class="logo-text">
         <h1>DERMAI</h1>
         <p class="tagline">AI-Powered Skincare Consultation</p>
@@ -26,7 +27,7 @@
 
     <nav class="header-links">
       <a href="index.html" class="login-btn">Home</a>
-      <a href="services.html" class="login-btn">Services</a>
+      <a href="services.html" class="login-btn" data-require-login="true">Services</a>
       <a href="contact.html" class="login-btn">Support</a>
       <a href="login.html" class="login-btn">Login</a>
     </nav>
@@ -418,5 +419,6 @@
   </footer>
 
   <script src="services.js"></script>
+  <script src="auth.js"></script>
 </body>
 </html>
