--- a/Derma AI/Login.html
+++ b/Derma AI/Login.html
@@ -79,7 +79,7 @@
         <button id="closeSignup" class="modal-close">&times;</button>
 
         <div class="brand-block modal-brand">
-            <img src="images/Dermai logo.png" class="brand-logo">
+            <img src="dermai-logo.png" class="brand-logo">
             <h1 class="brand-name">DERMAI</h1>
         </div>
 
