--- a/Derma AI/index.html
+++ b/Derma AI/index.html
@@ -60,7 +60,7 @@
 
             <div class="cta-buttons">
                 <a href="#features" class="btn secondary-light">Learn More</a>
-                <a href="login.html" class="btn primary">Get Started</a>
+                <a href="services.html" class="btn primary">Get Started</a>
             </div>
         </div>
     </section>
@@ -129,7 +129,7 @@
 
         <div class="footer-column">
             <h4 class="footer-heading">CUSTOMER SERVICE</h4>
-            <a href="#" class="footer-link">Contact Us</a>
+            <a href="contact.html" class="footer-link">Contact us</a>
             <a href="#" class="footer-link">Help Centre / FAQs</a>
             <a href="#" class="footer-link">Shipping</a>
             <a href="#" class="footer-link">Returns</a>
