--- a/Derma AI/Login.html
+++ b/Derma AI/Login.html
@@ -121,6 +121,47 @@
 
     </div>
 </div>
+ <footer class="custom-footer">
+    <div class="footer-main">
+      <div class="footer-column footer-brand">
+        <h3 class="footer-brand-title">DERMAI</h3>
+        <p class="footer-brand-text">
+          DERMAI is your AI-powered destination for smarter skincare.
+          From herbal routines to dermatology-inspired solutions, discover
+          routines that truly match your skin.
+        </p>
+      </div>
+
+      <div class="footer-column">
+        <h4 class="footer-heading">CUSTOMER SERVICE</h4>
+        <a href="contact.html" class="footer-link">Contact us</a>
+        <a href="#" class="footer-link">Help Centre / FAQs</a>
+        <a href="#" class="footer-link">Shipping</a>
+        <a href="#" class="footer-link">Returns</a>
+        <a href="#" class="footer-link">Track my order</a>
+      </div>
+
+      <div class="footer-column">
+        <h4 class="footer-heading">ABOUT DERMAI</h4>
+        <a href="#" class="footer-link">Our Story</a>
+        <a href="#" class="footer-link">Science & AI</a>
+        <a href="#" class="footer-link">Sustainability</a>
+        <a href="#" class="footer-link">Careers</a>
+      </div>
+
+      <div class="footer-column">
+        <h4 class="footer-heading">LEGAL</h4>
+        <a href="#" class="footer-link">Terms & Conditions</a>
+        <a href="#" class="footer-link">Privacy Policy</a>
+        <a href="#" class="footer-link">Cookie Policy</a>
+        <a href="#" class="footer-link">Accessibility</a>
+      </div>
+    </div>
+
+    <div class="footer-bottom">
+      © 2025 DERMAI. All rights reserved.
+    </div>
+  </footer>
 
 <script src="Login.js"></script>
 <script src="auth.js"></script>
