--- a/Derma AI/services.html
+++ b/Derma AI/services.html
@@ -389,7 +389,7 @@
 
       <div class="footer-column">
         <h4 class="footer-heading">CUSTOMER SERVICE</h4>
-        <a href="#" class="footer-link">Contact Us</a>
+        <a href="contact.html" class="footer-link">Contact us</a>
         <a href="#" class="footer-link">Help Centre / FAQs</a>
         <a href="#" class="footer-link">Shipping</a>
         <a href="#" class="footer-link">Returns</a>
